compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__binop_panic_right.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n    x && panic\n}"
---
module rec my.``mod``
let negate (x: bool) = begin
    x && failwith "Panic encountered"
end
