compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__binop_todo_left.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n    todo && x\n}"
---
module rec my.``mod``
let negate (x: bool) = begin
    failwith "Not implemented" && x
end
