compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__binop_todo_right.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n    x && todo\n}"
---
module rec my.``mod``

let negate (x: bool) = begin
    x && failwith "Not implemented"
end
