compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__case.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    True -> 1\n    False -> 0\n  }\n}\n"
---
module rec my.``mod``
let private go (a: bool) = begin
    match a with
    | true ->
        1L
    | false ->
        0L
end
