compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__expressions.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "\nfn go() {\n    True\n    False\n    Nil\n}\n"
---
module rec my.``mod``
let private go () = begin
    true
    false
    ()
end
