compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__negate_panic.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n  !panic\n}"
---
module rec my.``mod``
let negate (x: 'u8) = begin
    not (failwith "Panic encountered")
end
