compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__negate_todo.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n  !todo\n}"
---
module rec my.``mod``

let negate (x: 'a) = begin
    not (failwith "Not implemented")
end
