compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__negation.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n    !x\n}"
---
module rec my.``mod``
let negate (x: bool) = begin
    not (x)
end
