compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__negation_block.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "pub fn negate(x) {\n  !{\n    123\n    x\n  }\n}"
---
module rec my.``mod``
let negate (x: bool) = begin
    not (begin
        123
        x
    end)
end
