compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__nil_case.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "\nfn go(a) {\n  case a {\n    Nil -> 0\n  }\n}\n"
---
module rec my.``mod``

let private go (a: unit) = begin
    match a with
    | () ->
        0L
end
