compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bools__operators.snap
---
source: compiler-core/src/fsharp/tests/bools.rs
expression: "\nfn go() {\n    True && True\n    False || False\n}\n"
---
module rec my.``mod``
let private go () = begin
    true && true
    false || false
end
